--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -15,9 +15,9 @@ services:
       - ollama
     environment:
       - OLLAMA_HOST=http://ollama:11434
-      - OLLAMA_MODEL=llama3.2:3b
+      - OLLAMA_MODEL=${OLLAMA_MODEL}
     volumes:
-      - "C:/Users/tirth/OneDrive/Documents/Obsidian Vault/Obsidian Agent:/app/test_vault"
+      - ${OBSIDIAN_DIR}:/app/test_vault"
       - ./texts:/app/texts
     restart: unless-stopped
 
