--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -17,7 +17,7 @@ services:
       - OLLAMA_HOST=http://ollama:11434
       - OLLAMA_MODEL=${OLLAMA_MODEL}
     volumes:
-      - ${OBSIDIAN_DIR}:/app/test_vault"
+      - ${OBSIDIAN_DIR}:/app/test_vault
       - ./texts:/app/texts
     restart: unless-stopped
 
